# PawStation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pawstation.cpp
frontend/: CMakeLists.txt
frontend/imgui/: CMakeLists.txt  imgui_exit.cpp  imgui_pawstation.cpp  main.cpp
frontend/imgui/utils/: imgui_log.cpp
include/: pawstation.h
include/bus/: bus.h  bus_fmem.h
include/cpu/: cpu.h  cpu_interpreter.h  cpu_registers.h  disassembler.h  interpreter.h
include/frontend/imgui/: imgui_exit.h  imgui_pawstation.h
include/log/: imgui_log.h  log.h
include/utils/: application_manager.h  exit_system.h
src/: CMakeLists.txt
src/bus/: bus.cpp  bus_fmem.cpp
src/cpu/: cpu.cpp  cpu_interpreter.cpp  disassembler.cpp  interpreter.cpp
tests/: CMakeLists.txt
tests/cpu/: CMakeLists.txt  test_lui.cpp
tests/cpu/interpreter/: CMakeLists.txt  test_lui.cpp  test_ori.cpp
utils/: CMakeLists.txt  application_manager.cpp  pawstation.cpp
